chat logs now persist across messages, still working on displaying messages from chat (shouldn't take too long)